[BUILD] setup junit5 unit testing support